--- a/custom Spotlight/spotlight.html
+++ b/custom Spotlight/spotlight.html
@@ -6,7 +6,7 @@
     <!-- Fonts and Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100..900;1,100..900&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sofia+Sans:ital,wght@0,1..1000;1,1..1000&display=swap"/>
     <link rel="stylesheet" href="spotlight.css">
 
     <!-- Theme Variable Injection from Parent with Fallbacks -->
